# afterburner

./: .gitattributes  .gitignore  Cargo.toml  DEVEL.md  EXCLUDED_ENTITIES  LICENSE-APACHE  LICENSE-MIT  README.md  install.ps1  install.sh  release.toml
.cargo/: config.toml
afterburner/: Cargo.toml
afterburner-core/: Cargo.toml
afterburner-core/src/: engine.rs  error.rs  lib.rs  manifold.rs  registry.rs  state_store.rs  types.rs
afterburner-flow/: Cargo.toml
afterburner-flow/src/: engine.rs
afterburner-flow/tests/: flow_engine.rs  node_compat_e2e.rs
afterburner-ignite/: Cargo.toml
afterburner-ignite/src/: native_engine.rs
afterburner-ignite/tests/: node_compat_host.rs  perf_smoke.rs  script_mode.rs
afterburner-node-compat/: Cargo.toml  build.rs
afterburner-node-compat/polyfills/: buffer.js  cluster.js  console.js  crypto.js  dgram.js  dns.js  fetch.js  fs.js  host.js  http.js  http2.js  net.js  node_subpaths.js  perf_hooks.js  process.js  repl.js  require.js  shadow_argon2.js  shadow_bcrypt.js  state.js  stubs.js  timers.js  tls.js  url.js  util.js  v8.js  vm.js  web_compat.js  webassembly.js
afterburner-node-compat/src/: crypto_host.rs  dns_host.rs  fs_host.rs  host_context_active.rs  http_host.rs  lib.rs  native_install.rs
afterburner-node-compat/src/shadows/: mod.rs
afterburner-plugin/: Cargo.toml  build.sh
afterburner-plugin/src/: envelope.rs  host_api.rs  lib.rs
afterburner-plugin/src/globals/: crypto.rs  misc.rs
afterburner-plugin/src/modes/: daemon_event.rs  daemon_init.rs  invoke.rs  mod.rs  script.rs
afterburner-thrust/: Cargo.toml
afterburner-thrust/src/: admission.rs  lib.rs
afterburner-thrust/tests/: thrust_admission.rs  thrust_perf_smoke.rs
afterburner-wasi/: Cargo.toml  build.rs
afterburner-wasi/src/: compiler.rs  daemon_http.rs  daemon_net.rs  daemon_runtime.rs  daemon_tls.rs  daemon_workers.rs  host.rs  host_imports.rs  lib.rs  test_support.rs  wasm_engine.rs  wasm_loader.rs
afterburner-wasi/tests/: abi_parity.rs  daemon_axum.rs  daemon_runtime.rs  event_loop.rs  host_context.rs  node_compat_host.rs  perf_smoke.rs  sandbox_security.rs
afterburner/src/: builder.rs  lib.rs  ts.rs
afterburner/src/cli/: args.rs  banner.rs  daemon.rs  manifold.rs  mod.rs  passthrough.rs  run.rs  script.rs  worker.rs
afterburner/tests/: b0_cli_vs_library.rs  b0_script_mode.rs  b10_worker_threads.rs  b1_require_resolution.rs  b2_http_server.rs  b3_daemon_lifecycle.rs  b4_passthrough.rs  b6_require_resolution.rs  b7_dns.rs  b7_net.rs  b7_tls.rs  b_wasm_loader.rs  cli_manifold.rs
crates/afterburner/: Cargo.toml  README.md  report.1778542729690.1.001.json
crates/afterburner-adaptive/: Cargo.toml  README.md
crates/afterburner-adaptive/src/: adaptive.rs  lib.rs
crates/afterburner-flow/: Cargo.toml  README.md
crates/afterburner-flow/src/: chain.rs  engine.rs  lib.rs
crates/afterburner-flow/tests/: flow_engine.rs  node_compat_e2e.rs
crates/afterburner-node-compat/: Cargo.toml  README.md
crates/afterburner-node-compat/polyfills/: abort.js  assert.js  async_hooks.js  buffer.js  child_process.js  cluster.js  console.js  crypto.js  dgram.js  dns.js  domain.js  entry.js  events.js  fetch.js  fs.js  host.js  http.js  http2.js  inspector.js  module.js  net.js  node_subpaths.js  os.js  path.js  perf_hooks.js  process.js  punycode.js  querystring.js  quic.js  readline.js  require.js  shadow_jsonwebtoken.js  shadow_sharp.js  shadow_sqlite3.js  stream.js  string_decoder.js  stubs.js  tls.js  trace_events.js  tty.js  (+10 more)
crates/afterburner-node-compat/src/: active_manifold.rs  bundle.rs  child_process_host.rs  crypto_host.rs  dns_host.rs  fs_host.rs  hash_handles.rs  http_host.rs  lib.rs  native_install.rs  os_host.rs  prime_host.rs  sign_handles.rs  state_active.rs  subtle_aes.rs  subtle_ec.rs  subtle_host.rs  subtle_rsa.rs  v8_host.rs  v8_serde.rs  zlib_host.rs
crates/afterburner-plugin/: Cargo.toml  build.sh
crates/afterburner-plugin/src/: envelope.rs  host_api.rs  lib.rs  stdio.rs
crates/afterburner-wasi/: Cargo.toml  README.md  build.rs
crates/afterburner-wasi/plugin/: README.md  afterburner_plugin.wasm  afterburner_plugin.wasm.bundle-sha256
crates/afterburner-wasi/src/: columnar.rs  daemon_cluster.rs  daemon_dgram.rs  daemon_envelopes.rs  daemon_http.rs  daemon_http3.rs  daemon_http_outbound.rs  daemon_inspector.rs  daemon_net.rs  daemon_port_claims.rs  daemon_runtime.rs  daemon_sab.rs  daemon_shard_pool.rs  daemon_tls.rs  daemon_workers.rs  host.rs  host_imports.rs  intake.rs  lib.rs  manifold_codec.rs  nozzle.rs  test_support.rs  wasm_engine.rs  wasm_loader.rs
crates/afterburner-wasi/tests/: abi_parity.rs  daemon_axum.rs  daemon_runtime.rs  host_context.rs  node_compat_host.rs  sandbox_security.rs
crates/afterburner/src/: builder.rs  esm.rs  lib.rs  prelude.rs  ts.rs
crates/afterburner/tests/: b0_check.rs  b0_cli_vs_library.rs  b0_process_argv_env.rs  b0_script_mode.rs  b10_security.rs  b10_worker_threads.rs  b1_require_resolution.rs  b2_http_server.rs  b2b_multiplex.rs  b3_daemon_lifecycle.rs  b4_passthrough.rs  b5_shim.rs  b6_require_resolution.rs  b7_dgram.rs  b7_dns.rs  b7_net.rs  b7_net_security.rs  b7_tls.rs  b7_tls_security.rs  b8_typescript.rs  b9_esm.rs  b_abort_signal_any.rs  b_async_hooks_await.rs  b_async_hooks_real.rs  b_async_iterator_global.rs  b_async_outbound_http.rs  b_atomics.rs  b_atomics_wait_async.rs  b_atomics_wait_xprocess.rs  b_blob_url.rs  b_buffer_extras.rs  b_buffer_isutf8_test_mock.rs  b_builder_cwd.rs  b_callsite_api.rs  b_child_process_async.rs  b_child_process_wasm.rs  b_cli_parity.rs  b_cluster_multiproc.rs  b_columnar_udf.rs  b_crypto_extras.rs  (+73 more)
examples/basic/: Cargo.toml  README.md
examples/basic/src/: main.rs
examples/billion-row-bench/: Cargo.toml
examples/billion-row-bench/src/: main.rs
examples/cache-backend-sqlite/: Cargo.toml
examples/cache-backend-sqlite/src/: main.rs
examples/express-app/: Cargo.toml  README.md  package.json
examples/express-app/src/: app.js  main.rs
examples/fetch-and-env/: Cargo.toml  README.md
examples/fetch-and-env/src/: main.rs
(+136 files in other folders)
