[workspace]
resolver = "2"
members = [
    "afterburner",
    "afterburner-core",
    "afterburner-wasi",
    "afterburner-ignite",
    "afterburner-flow",
    "afterburner-adaptive",
    "afterburner-node-compat",
    "afterburner-plugin",
    "afterburner-thrust",
]
# `afterburner-plugin` targets `wasm32-wasip1`. Building it on the host
# triple fails because `javy-plugin-api` assumes a WASI environment.
# Keep it out of `cargo build --workspace` by trimming default-members;
# the plugin is built explicitly via `afterburner-plugin/build.sh`.
default-members = [
    "afterburner",
    "afterburner-core",
    "afterburner-wasi",
    "afterburner-ignite",
    "afterburner-flow",
    "afterburner-adaptive",
    "afterburner-node-compat",
    "afterburner-thrust",
]

# `examples/*` are standalone Cargo projects (each with its own
# [workspace] root). Exclude the directory defensively in case a
# user drops a new example without the stanza.
exclude = ["examples"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
authors = ["Theo Bulut <vertexclique@gmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
afterburner = { path = "afterburner" }
afterburner-core = { path = "afterburner-core" }
afterburner-wasi = { path = "afterburner-wasi" }
afterburner-ignite = { path = "afterburner-ignite" }
afterburner-flow = { path = "afterburner-flow" }
afterburner-adaptive = { path = "afterburner-adaptive" }
afterburner-node-compat = { path = "afterburner-node-compat" }
afterburner-thrust = { path = "afterburner-thrust" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
hmac = "0.12"
md-5 = "0.10"
getrandom = "0.2"
aes-gcm = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
pbkdf2 = "0.12"
scrypt = "0.11"
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
spki = { version = "0.7", features = ["pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
base64 = "0.22"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2", features = ["json"] }
tempfile = "3"
flate2 = "1"
kovan-map = "0.1"
kovan-channel = "0.1"
libc = "0.2"

wasmtime = { version = "36", features = ["cranelift", "cache"] }
wasmtime-wasi = "36"
anyhow = "1"

# B2 daemon-mode HTTP server plumbing. axum/tokio/hyper are only
# pulled by `afterburner-wasi/daemon` (off by default) and the `burn`
# CLI — library consumers who don't run `http.createServer().listen()`
# don't pay the compile-time or binary-size cost.
axum = "0.7"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "signal", "sync"] }
hyper = "1"
bytes = "1"

# B7 tls — `tls.connect` / `tls.createServer`, gated the same way as
# the daemon HTTP plumbing above. `webpki-roots` ships the Mozilla
# root CA bundle so client connects work without filesystem access.
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
rcgen = "0.13"

# B7 dns — `hickory-resolver` (formerly trust-dns-resolver) is the
# canonical pure-Rust async DNS resolver. We use it synchronously
# from a worker thread so the host-import boundary stays sync (the
# plugin can't host-call from inside an async stack — it's running
# inside Wasmtime). Default features pull in tokio + ring; we keep
# them off and use the resolver's `Resolver` (sync) entry points.
hickory-resolver = { version = "0.24", default-features = false, features = [
    "tokio-runtime", "system-config",
] }

rquickjs = { version = "0.11", features = ["bindgen"] }

fastrace = { version = "0.7", features = ["enable"] }

javy-plugin-api = "6.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.bench]
inherits = "release"
