[package]
name = "afterburner-ignite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Afterburner native engine — rquickjs FFI"

[dependencies]
afterburner-core.workspace = true
rquickjs.workspace = true
serde.workspace = true
serde_json.workspace = true
kovan-map.workspace = true
fastrace.workspace = true
afterburner-node-compat.workspace = true

[dev-dependencies]
rsa.workspace = true
p256.workspace = true
rand = "0.8"
