[package]
name = "afterburner-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Afterburner custom Javy plugin — declares afterburner:host imports and wires __host_* JS globals"

[lib]
crate-type = ["cdylib"]

[dependencies]
javy-plugin-api.workspace = true
serde_json.workspace = true
