[package]
name = "afterburner-thrust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-threaded thrust engine for afterburner: per-worker Chase-Lev deques, steal-when-idle scheduling, token-bucket admission, and a BEAM-style I/O pool."

[lib]
path = "src/lib.rs"

[dependencies]
afterburner-core.workspace = true
afterburner-wasi.workspace = true
kovan-channel.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
