[package]
name = "afterburner-thrust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Afterburner thrust scheduler — work-stealing thread pool"

[lib]
path = "src/lib.rs"

[dependencies]
afterburner-core.workspace = true
afterburner-wasi.workspace = true
kovan-channel.workspace = true
kovan-map.workspace = true
serde_json.workspace = true

# Linux-only: NUMA topology (sysfs parse) + sched_setaffinity pinning.
# Gated by target_os cfg in the crate so non-Linux builds skip entirely.
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
serde_json.workspace = true
