[package]
name = "afterburner-wasi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Afterburner WASM sandbox engine — Wasmtime + QuickJS-in-WASM for untrusted JS code"

[features]
default = []
# Expose HostFunction::HttpRequest to JS scripts. Off by default so flow
# scripts don't get ambient network access. Forwards to afterburner-core's
# feature of the same name.
host-http = ["afterburner-core/host-http"]
# Daemon-mode HTTP server plumbing (http.createServer().listen()).
# Pulls axum + tokio + hyper into the crate. The `burn` CLI enables
# this; library consumers that only run UDF / one-shot scripts
# leave it off and don't pay the cost.
daemon = ["dep:axum", "dep:tokio", "dep:hyper", "dep:bytes"]
# L3 shadows. Each shadow pulls in its own Rust crate (e.g. bcrypt)
# and wires a host import the plugin's JS-side polyfill calls at
# require() time. Plugin itself always ships the import stubs;
# without the feature the host returns "shadow-bcrypt not enabled".
shadow-bcrypt = ["afterburner-node-compat/shadow-bcrypt"]
shadow-argon2 = ["afterburner-node-compat/shadow-argon2"]
shadow-jsonwebtoken = ["afterburner-node-compat/shadow-jsonwebtoken"]

[dependencies]
afterburner-core.workspace = true
wasmtime.workspace = true
wasmtime-wasi = { workspace = true, features = ["preview1"] }
serde.workspace = true
serde_json.workspace = true
kovan-map.workspace = true
kovan-channel.workspace = true
anyhow.workspace = true
tempfile.workspace = true
fastrace.workspace = true
afterburner-node-compat.workspace = true
hex.workspace = true
base64.workspace = true
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }

[dev-dependencies]
afterburner-ignite.workspace = true
rsa.workspace = true
p256.workspace = true
rand = "0.8"

[build-dependencies]
sha2.workspace = true
