[package]
name = "afterburner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Sandboxed JavaScript runtime for Rust. WASM (Wasmtime) + native (QuickJS) backends, multi-threaded scheduler, capability-gated host I/O — one ergonomic entry point."

[lib]
path = "src/lib.rs"

[[bin]]
name = "burn"
path = "src/bin/burn.rs"
required-features = ["bin"]

[dependencies]
afterburner-core = { workspace = true }
afterburner-node-compat = { workspace = true }
afterburner-wasi = { workspace = true, optional = true }
afterburner-ignite = { workspace = true, optional = true }
afterburner-adaptive = { workspace = true, optional = true }
afterburner-flow = { workspace = true, optional = true }
afterburner-thrust = { workspace = true, optional = true }
serde_json = { workspace = true }
# bin-only — gated behind `bin` feature so library consumers don't pull them.
clap = { version = "4", features = ["derive"], optional = true }
rustyline = { version = "14", optional = true }
anyhow = { version = "1", optional = true }
tokio = { workspace = true, optional = true }
# B8 — TypeScript strip-types via oxc. Gated behind `ts` because the
# oxc graph adds ~3 MiB of binary size and non-TS users never pay it.
oxc = { version = "=0.127.0", default-features = false, features = [
    "transformer", "codegen", "semantic",
], optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
# Serialize tests that spawn long-lived `burn` subprocesses. Each
# subprocess cold-starts the wasmtime engine + plugin (~seconds in
# debug builds), and running them in parallel oversubscribes CPU
# until their timing assertions flake. `#[serial]` pins those tests
# to a shared lock group while leaving the rest of the suite parallel.
serial_test = "3"

[features]
default = ["wasm", "native", "thrust"]
wasm = ["dep:afterburner-wasi"]
native = ["dep:afterburner-ignite"]
adaptive = ["dep:afterburner-adaptive", "wasm", "native"]
thrust = ["dep:afterburner-thrust", "wasm"]
flow = ["dep:afterburner-flow", "wasm"]
# host-http propagates to afterburner-wasi only today; node-compat compiles
# all host backends unconditionally (no feature block there).
host-http = ["afterburner-wasi?/host-http"]
# `bin` pulls in the CLI deps + selects the default modes that `burn`
# assumes (adaptive for auto-tier, thrust for --workers, wasi/daemon
# for http.createServer() support, tokio for the daemon event loop
# and SIGINT handler).
bin = [
    "dep:clap",
    "dep:rustyline",
    "dep:anyhow",
    "dep:tokio",
    "adaptive",
    "thrust",
    "afterburner-wasi/daemon",
]
# B8 — TypeScript strip-types. `burn foo.ts` transpiles via oxc and
# runs the resulting JS through the normal pipeline. Opt-in only.
ts = ["dep:oxc", "dep:thiserror"]
# L3 shadow: bcrypt. `require('bcrypt')` resolves to a pure-Rust
# shadow that works inside the WASM sandbox (where native .node
# addons cannot load). Forwards the feature through afterburner-wasi
# to afterburner-node-compat, which pulls in the `bcrypt` crate.
shadow-bcrypt = ["afterburner-wasi?/shadow-bcrypt"]
shadow-argon2 = ["afterburner-wasi?/shadow-argon2"]
