[package]
name = "afterburner-adaptive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Afterburner adaptive tier — native/WASM switching"

[dependencies]
afterburner-core.workspace = true
afterburner-wasi.workspace = true
afterburner-ignite.workspace = true
kovan-map.workspace = true
kovan-channel.workspace = true
serde_json.workspace = true
fastrace.workspace = true
